--- a/src/component/Tutorial/TutorialBox.css
+++ b/src/component/Tutorial/TutorialBox.css
@@ -25,15 +25,17 @@
   justify-content: space-between;
   border-top: 1px solid var(--color-tutorial-bg-darker);
   padding: 0;
-  width: var(--size-sidebar);
+  width: 100%;
 }
 
 .tutorial > footer span.controls > * {
   display: block;
-  height: calc(var(--base-size-navbar) * 0.85);
+  height: var(--base-size-navbar);
   width: auto;
   aspect-ratio: 1/1;
-  padding: 0.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .tutorial > footer span.controls {
